完成跑道图随动，开始处理地图信息