@@ -1,6 +1,7 @@
 package org.flyunion.config;
 
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
@@ -8,20 +9,19 @@ import org.springframework.web.filter.CorsFilter;
 import java.util.Arrays;
 import java.util.List;
 
+@Configuration
 public class CORSConfig {
-
 	@Bean
 	public CorsFilter corsFilter() {
 		CorsConfiguration config = new CorsConfiguration();
-		config.setAllowedOrigins(List.of("http://localhost:5174")); // 允许来自这个源的请求
-		config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 允许的方法
-		config.setAllowedHeaders(List.of("*")); // 允许的头部
-		config.setAllowCredentials(true); // 允许携带cookies
+		config.setAllowedOrigins(List.of("http://localhost:5174")); // 允许你的 Vue 前端
+		config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+		config.setAllowedHeaders(List.of("Content-Type", "Authorization")); // 允许的请求头
+		config.setAllowCredentials(true); // 允许跨域携带 Cookie
+		config.setMaxAge(3600L); // 预检请求缓存时间
 
-		// 对于所有路径应用CORS配置
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", config);
-
+		source.registerCorsConfiguration("/**", config); // 对所有路径生效
 		return new CorsFilter(source);
 	}
 
